--- a/src/pages/chat/chatComponents/chatBody.css
+++ b/src/pages/chat/chatComponents/chatBody.css
@@ -9,7 +9,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 25px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 
 }
